# python-template

./: .editorconfig  .gitignore  Makefile  pyproject.toml  pyrightconfig.json  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-push
python_example/: hello.py
tests/: test_hello.py
