[tool.poetry]
name = "python-template"
description = "Template for Python projects"
license = "MIT"
version = "0.1.0"
authors = ["evgenymarkov <evgenymarkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "~3.8"
mimesis = "4.1.3"

[tool.poetry.dev-dependencies]
pytest = "6.2.1"
pytest-cov = "2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version = "38"
multi_line_output = 3

[tool.coverage.run]
omit = [".venv/*", "tests/*"]
